--- a/landingpage1.html
+++ b/landingpage1.html
@@ -3,63 +3,124 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="PixelCraft offers innovative web development, digital strategy, and UI/UX design solutions to enhance your online presence."
+    />
+    <meta
+      name="keywords"
+      content="web development, digital strategy, UI/UX design, responsive design"
+    />
+    <meta name="author" content="Anjali More" />
     <title>Responsive Landing Page</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Navigation Menu -->
-    <nav id="navbar">
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
+    <header>
+      <!-- Navigation Bar -->
+      <nav id="navbar">
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <li><a href="#faq">FAQ</a></li>
+        </ul>
+      </nav>
+    </header>
 
-    <!-- Main Content -->
-    <section id="home">
-      <h1>Welcome to Our Landing Page</h1>
-      <p>Scroll down to learn more about our services and company.</p>
-    </section>
+    <main>
+      <!-- Main Content -->
+      <section id="home">
+        <header>
+          <h1>
+            Welcome to PixelCraft – Crafting Timeless & Aesthetic Solutions
+          </h1>
+        </header>
+        <p>Where innovation meets simplicity.</p>
+        <p>
+          Our expert team brings your ideas to life with dedication and
+          precision.
+        </p>
+      </section>
 
-    <section id="services">
-      <h2>Our Services</h2>
-      <p>
-        We offer a range of services to help you achieve your goals. Whether
-        it's web development, digital marketing, or consultancy, we've got you
-        covered.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec
-        odio. Praesent libero. Sed cursus ante dapibus diam.
-      </p>
-    </section>
+      <section id="services">
+        <h2>Our Services</h2>
+        <ul>
+          <li>
+            Web Development: "Building responsive, scalable, and user-friendly
+            websites tailored to your business needs."
+          </li>
+          <li>
+            Digital Strategy: "Enhancing your online presence with customized
+            marketing strategies and SEO solutions."
+          </li>
+          <li>
+            UI/UX Design: "Creating intuitive and engaging digital experiences
+            that captivate users."
+          </li>
+        </ul>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec
+          odio. Praesent libero. Sed cursus ante dapibus diam.
+        </p>
+      </section>
 
-    <section id="about">
-      <h2>About Us</h2>
-      <p>
-        We are a dedicated team of professionals with a passion for helping
-        businesses succeed. Our expertise spans various domains, ensuring
-        comprehensive solutions for our clients.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec
-        odio. Praesent libero. Sed cursus ante dapibus diam.
-      </p>
-    </section>
+      <section id="about">
+        <h2>About Us</h2>
+        <p>
+          At PixelCraft, we believe in blending creativity with technology to
+          deliver outstanding results. With a passion for innovation and a
+          commitment to excellence, we have been helping businesses grow and
+          evolve in the digital space for over 12 years.
+        </p>
+      </section>
 
-    <section id="contact">
-      <h2>Contact Us</h2>
-      <p>
-        Get in touch with us to discuss how we can help you. Fill out the form
-        below or reach us through the provided contact details.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec
-        odio. Praesent libero. Sed cursus ante dapibus diam.
-      </p>
-    </section>
+      <section id="contact">
+        <h2>Contact Us</h2>
+        <h3>Let’s connect!</h3>
+        <p>
+          Whether you have a project in mind or need assistance, our team is
+          here to help.
+        </p>
+        <br />
+        <p>Get in touch today!</p>
+        <p>
+          Email:
+          <a href="mailto:contact@pixelcraft.com">contact@pixelcraft.com</a>
+        </p>
+        <p>Phone: <a href="tel:+1234567890">+ 123-456-7890</a></p>
+        <p>Location: 123 Savarkar Road, Mumbai, India</p>
+        <a href="https://www.canva.com/"><button>Say hi!</button></a>
+      </section>
+
+      <section id="faq">
+        <h2>FAQ</h2>
+        <div class="quesans">
+          <p>
+            <strong>Q1:</strong> How long does it take to complete a project?
+            <br />
+            <strong>Answer:</strong> Project timelines vary based on complexity,
+            but we strive to deliver results within 3 weeks.
+          </p>
+          <p>
+            <strong>Q2:</strong> Do you offer support after project completion?
+            <br />
+            <strong>Answer:</strong> Yes, we provide comprehensive post-launch
+            support and maintenance to ensure your website runs smoothly."
+          </p>
+          <p>
+            <strong>Q3:</strong> What industries do you specialize in? <br />
+            <strong>Answer:</strong> We have experience working across a variety
+            of industries, including retail, healthcare, finance, and more.
+          </p>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <p>&copy; Anjali More. All rights reserved. 2024-ProdigyInfotechTask.</p>
+    </footer>
 
     <!-- Link to the JavaScript file for interactivity -->
     <script src="script.js"></script>
